product-gallery-img align and size fix

--- a/css/master.css
+++ b/css/master.css
@@ -35,6 +35,16 @@ html {
  overflow-x: scroll;
 }
 
+.product-gallery__item {
+  width: 300px;
+  height: 400px;
+}
+
+.product-gallery__item img {
+  vertical-align: top;
+  height: 100%;
+}
+
 .product-info {
   padding: 1rem 1rem 0;
   font-family: 'Raleway', 'Helvetica Neue', 'Helvetica', 'Arial',  sans-serif;
